// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Result View Tests Render with Columns 1`] = `
<ResultView
  resultSet={
    Object {
      "columns": Array [
        Object {
          "dataType": Object {
            "type": 5,
          },
          "field": "0",
          "title": "col1",
        },
        Object {
          "dataType": Object {
            "type": 0,
          },
          "field": "1",
          "title": "col2",
        },
        Object {
          "dataType": Object {
            "type": 1,
          },
          "field": "2",
          "title": "col3",
        },
        Object {
          "dataType": Object {
            "type": 2,
          },
          "field": "3",
          "title": "col4",
        },
        Object {
          "dataType": Object {
            "type": 3,
          },
          "field": "4",
          "title": "col5",
        },
        Object {
          "dataType": Object {
            "type": 4,
          },
          "field": "5",
          "title": "col6",
        },
        Object {
          "dataType": Object {
            "type": 5,
          },
          "field": "6",
          "title": "col7",
        },
        Object {
          "dataType": Object {
            "type": 6,
          },
          "field": "7",
          "title": "col8",
        },
        Object {
          "dataType": Object {
            "type": 7,
          },
          "field": "8",
          "title": "col9",
        },
        Object {
          "dataType": Object {
            "type": 8,
          },
          "field": "9",
          "title": "col10",
        },
        Object {
          "dataType": Object {
            "type": 9,
          },
          "field": "10",
          "title": "col11",
        },
        Object {
          "dataType": Object {
            "type": 10,
          },
          "field": "11",
          "title": "col12",
        },
        Object {
          "dataType": Object {
            "type": 11,
          },
          "field": "12",
          "title": "col13",
        },
        Object {
          "dataType": Object {
            "type": 12,
          },
          "field": "13",
          "title": "col14",
        },
        Object {
          "dataType": Object {
            "type": 13,
          },
          "field": "14",
          "title": "col15",
        },
        Object {
          "dataType": Object {
            "type": 14,
          },
          "field": "15",
          "title": "col16",
        },
        Object {
          "dataType": Object {
            "type": 15,
          },
          "field": "16",
          "title": "col17",
        },
        Object {
          "dataType": Object {
            "type": 16,
          },
          "field": "17",
          "title": "col18",
        },
        Object {
          "dataType": Object {
            "type": 17,
          },
          "field": "18",
          "title": "col19",
        },
        Object {
          "dataType": Object {
            "type": 18,
          },
          "field": "19",
          "title": "col20",
        },
        Object {
          "dataType": Object {
            "type": 19,
          },
          "field": "20",
          "title": "col21",
        },
        Object {
          "dataType": Object {
            "type": 20,
          },
          "field": "21",
          "title": "col22",
        },
        Object {
          "dataType": Object {
            "type": 21,
          },
          "field": "22",
          "title": "col23",
        },
        Object {
          "dataType": Object {
            "type": 22,
          },
          "field": "23",
          "title": "col24",
        },
        Object {
          "dataType": Object {
            "type": 23,
          },
          "field": "24",
          "title": "col25",
        },
        Object {
          "dataType": Object {
            "type": 24,
          },
          "field": "25",
          "title": "col26",
        },
        Object {
          "dataType": Object {
            "type": 25,
          },
          "field": "26",
          "title": "col27",
        },
        Object {
          "dataType": Object {
            "type": 26,
          },
          "field": "27",
          "title": "col28",
        },
        Object {
          "dataType": Object {
            "type": 27,
          },
          "field": "28",
          "title": "col29",
        },
        Object {
          "dataType": Object {
            "type": 28,
          },
          "field": "29",
          "title": "col30",
        },
        Object {
          "dataType": Object {
            "type": 29,
          },
          "field": "30",
          "title": "col31",
        },
        Object {
          "dataType": Object {
            "type": 30,
          },
          "field": "31",
          "title": "col32",
        },
        Object {
          "dataType": Object {
            "type": 31,
          },
          "field": "32",
          "title": "col33",
        },
        Object {
          "dataType": Object {
            "type": 32,
          },
          "field": "33",
          "title": "col34",
        },
        Object {
          "dataType": Object {
            "type": 33,
          },
          "field": "34",
          "title": "col35",
        },
        Object {
          "dataType": Object {
            "type": 34,
          },
          "field": "35",
          "title": "col36",
        },
        Object {
          "dataType": Object {
            "type": 35,
          },
          "field": "36",
          "title": "col37",
        },
        Object {
          "dataType": Object {
            "type": 36,
          },
          "field": "37",
          "title": "col38",
        },
        Object {
          "dataType": Object {
            "type": 37,
          },
          "field": "38",
          "title": "col39",
        },
        Object {
          "dataType": Object {
            "type": 38,
          },
          "field": "39",
          "title": "col40",
        },
        Object {
          "dataType": Object {
            "type": 39,
          },
          "field": "40",
          "title": "col41",
        },
        Object {
          "dataType": Object {
            "type": 40,
          },
          "field": "41",
          "title": "col42",
        },
        Object {
          "dataType": Object {
            "type": 41,
          },
          "field": "42",
          "title": "col43",
        },
        Object {
          "dataType": Object {
            "type": 42,
          },
          "field": "43",
          "title": "col44",
        },
        Object {
          "dataType": Object {
            "type": 43,
          },
          "field": "44",
          "title": "col45",
        },
        Object {
          "dataType": Object {
            "type": 44,
          },
          "field": "45",
          "title": "col46",
        },
        Object {
          "dataType": Object {
            "type": 45,
          },
          "field": "46",
          "title": "col47",
        },
        Object {
          "dataType": Object {
            "type": 46,
          },
          "field": "47",
          "title": "col48",
        },
        Object {
          "dataType": Object {
            "type": 47,
          },
          "field": "48",
          "title": "col49",
        },
      ],
      "data": Object {
        "currentPage": 0,
        "executionInfo": Object {
          "text": "Endless Possibilities",
          "type": 2,
        },
        "rows": Array [],
      },
      "resultId": "123",
      "sql": "select 1",
      "type": "resultSet",
    }
  }
>
  <Container
    className="msg resultView"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultView"
      style={
        Object {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <TreeGrid
        columns={
          Array [
            Object {
              "field": "0",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 5,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col1",
              "width": undefined,
            },
            Object {
              "field": "1",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 0,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col2",
              "width": undefined,
            },
            Object {
              "field": "2",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 1,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col3",
              "width": undefined,
            },
            Object {
              "field": "3",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 2,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col4",
              "width": undefined,
            },
            Object {
              "field": "4",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 3,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col5",
              "width": undefined,
            },
            Object {
              "field": "5",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 4,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col6",
              "width": undefined,
            },
            Object {
              "field": "6",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 5,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col7",
              "width": undefined,
            },
            Object {
              "field": "7",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 6,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col8",
              "width": undefined,
            },
            Object {
              "field": "8",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 7,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col9",
              "width": undefined,
            },
            Object {
              "field": "9",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 8,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col10",
              "width": undefined,
            },
            Object {
              "field": "10",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 9,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col11",
              "width": undefined,
            },
            Object {
              "field": "11",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 10,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col12",
              "width": undefined,
            },
            Object {
              "field": "12",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 11,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col13",
              "width": undefined,
            },
            Object {
              "field": "13",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 12,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col14",
              "width": undefined,
            },
            Object {
              "field": "14",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 13,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col15",
              "width": undefined,
            },
            Object {
              "field": "15",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 14,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col16",
              "width": undefined,
            },
            Object {
              "field": "16",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 15,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col17",
              "width": undefined,
            },
            Object {
              "field": "17",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 16,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col18",
              "width": undefined,
            },
            Object {
              "field": "18",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 17,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col19",
              "width": undefined,
            },
            Object {
              "field": "19",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 18,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col20",
              "width": undefined,
            },
            Object {
              "field": "20",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 19,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col21",
              "width": undefined,
            },
            Object {
              "field": "21",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 20,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col22",
              "width": undefined,
            },
            Object {
              "field": "22",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 21,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col23",
              "width": undefined,
            },
            Object {
              "field": "23",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 22,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col24",
              "width": undefined,
            },
            Object {
              "field": "24",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 23,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col25",
              "width": undefined,
            },
            Object {
              "field": "25",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 24,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col26",
              "width": undefined,
            },
            Object {
              "field": "26",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 25,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col27",
              "width": undefined,
            },
            Object {
              "field": "27",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 26,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col28",
              "width": undefined,
            },
            Object {
              "field": "28",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 27,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col29",
              "width": undefined,
            },
            Object {
              "field": "29",
              "formatter": "plaintext",
              "formatterClipboard": "plaintext",
              "formatterParams": Object {
                "dbDataType": 28,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col30",
              "width": undefined,
            },
            Object {
              "field": "30",
              "formatter": "datetime",
              "formatterClipboard": "datetime",
              "formatterParams": Object {
                "dbDataType": 29,
                "outputFormat": "HH:mm:ss",
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col31",
              "width": undefined,
            },
            Object {
              "field": "31",
              "formatter": "datetime",
              "formatterClipboard": "datetime",
              "formatterParams": Object {
                "dbDataType": 30,
                "outputFormat": "HH:mm:ss",
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col32",
              "width": undefined,
            },
            Object {
              "field": "32",
              "formatter": "datetime",
              "formatterClipboard": "datetime",
              "formatterParams": Object {
                "outputFormat": "YYYY",
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col33",
              "width": undefined,
            },
            Object {
              "field": "33",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 32,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col34",
              "width": undefined,
            },
            Object {
              "field": "34",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 33,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col35",
              "width": undefined,
            },
            Object {
              "field": "35",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 34,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col36",
              "width": undefined,
            },
            Object {
              "field": "36",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 35,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col37",
              "width": undefined,
            },
            Object {
              "field": "37",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 36,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col38",
              "width": undefined,
            },
            Object {
              "field": "38",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 37,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col39",
              "width": undefined,
            },
            Object {
              "field": "39",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 38,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col40",
              "width": undefined,
            },
            Object {
              "field": "40",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 39,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col41",
              "width": undefined,
            },
            Object {
              "field": "41",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 40,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col42",
              "width": undefined,
            },
            Object {
              "field": "42",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 41,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col43",
              "width": undefined,
            },
            Object {
              "field": "43",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 42,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col44",
              "width": undefined,
            },
            Object {
              "field": "44",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 43,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col45",
              "width": undefined,
            },
            Object {
              "field": "45",
              "formatter": "textarea",
              "formatterClipboard": "textarea",
              "formatterParams": Object {
                "dbDataType": 44,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col46",
              "width": undefined,
            },
            Object {
              "field": "46",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 45,
              },
              "minWidth": 50,
              "resizable": true,
              "title": "col47",
              "width": undefined,
            },
            Object {
              "field": "47",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 46,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col48",
              "width": undefined,
            },
            Object {
              "field": "48",
              "formatter": [Function],
              "formatterClipboard": [Function],
              "formatterParams": Object {
                "dbDataType": 47,
              },
              "minWidth": 150,
              "resizable": true,
              "title": "col49",
              "width": undefined,
            },
          ]
        }
        onCellContext={[Function]}
        onColumnResized={[Function]}
        options={
          Object {
            "alternatingRowBackgrounds": false,
            "horizontalGridLines": true,
            "layout": "fitData",
            "resizableRows": true,
            "selectionType": 3,
            "verticalGridLines": true,
          }
        }
        style={
          Object {
            "fontSize": "10pt",
          }
        }
        tableData={Array []}
      >
        <div
          className="msg treeGrid horizontalGrid verticalGrid"
          style={
            Object {
              "fontSize": "10pt",
            }
          }
        />
      </TreeGrid>
      <Menu
        id="cellContextMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="cellContextMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="cellContextMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultView>
`;

exports[`Result View Tests Render with Error/Response 1`] = `
<ResultView
  resultSet={
    Object {
      "columns": Array [],
      "data": Object {
        "currentPage": 0,
        "executionInfo": Object {
          "text": "Error",
          "type": 0,
        },
        "rows": Array [],
      },
      "resultId": "123",
      "sql": "select 1",
      "type": "resultSet",
    }
  }
>
  <Container
    className="msg resultView"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultView"
      style={
        Object {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <Menu
        id="cellContextMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="cellContextMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="cellContextMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultView>
`;

exports[`Result View Tests Standard Rendering 1`] = `
<ResultView
  resultSet={
    Object {
      "columns": Array [],
      "data": Object {
        "currentPage": 0,
        "rows": Array [],
      },
      "resultId": "123",
      "sql": "select 1",
      "type": "resultSet",
    }
  }
>
  <Container
    className="msg resultView"
    orientation="column"
  >
    <div
      className="msg container fixedScrollbar resultView"
      style={
        Object {
          "alignItems": undefined,
          "flexDirection": "column",
          "flexWrap": undefined,
          "justifyContent": undefined,
        }
      }
    >
      <TreeGrid
        columns={Array []}
        onCellContext={[Function]}
        onColumnResized={[Function]}
        options={
          Object {
            "alternatingRowBackgrounds": false,
            "horizontalGridLines": true,
            "layout": "fitData",
            "resizableRows": true,
            "selectionType": 3,
            "verticalGridLines": true,
          }
        }
        style={
          Object {
            "fontSize": "10pt",
          }
        }
        tableData={Array []}
      >
        <div
          className="msg treeGrid horizontalGrid verticalGrid"
          style={
            Object {
              "fontSize": "10pt",
            }
          }
        />
      </TreeGrid>
      <Menu
        id="cellContextMenu"
        onItemClick={[Function]}
        orientation="column"
        placement="bottom-start"
      >
        <Popup
          className="msg menu"
          id="cellContextMenu"
          onClose={[Function]}
          onKeyDown={[Function]}
          onOpen={[Function]}
          orientation="column"
          pinned={false}
          placement="bottom-start"
          showArrow={false}
        >
          <Portal
            id="cellContextMenu"
            onClose={[Function]}
            onKeyDown={[Function]}
            onOpen={[Function]}
          />
        </Popup>
      </Menu>
    </div>
  </Container>
</ResultView>
`;
